Removed default icon visualization of popover menu on ios. Fixed setting of random credentials/tickets. Fixed tickets/credentials search.

--- a/src/pages/popover-menu/popover-menu.scss
+++ b/src/pages/popover-menu/popover-menu.scss
@@ -1,9 +1,14 @@
 page-popover-menu {
+  .no-btm-margin {
+    margin-bottom: 0px;
+  }
+
   logout button {
     width: 100%;
     margin: 0 !important;
     min-height: 4.4rem;
   }
+
   #logoutText {
     color: black;
     text-transform: none;
